# gdelta

./: .gitignore  .gitmodules  CMakeLists.txt  LIBRARY_LICENSES  LICENSE  README.md  config.h.in  gdelta.cpp  gdelta.h  main.cpp
.github/workflows/: cmake-multi-platform.yml
